--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Pathsource - Logging
+email: nathan@pathsource.com
+description: "Pathsource Blog and Timeline"
 baseurl: ""
-url: "http://yourdomain.com"
+url: "http://pathsource.github.com"
 
 # Build settings
 markdown: kramdown
