rename this site

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Pathsource - Logging
+title: Life at PathSource
 email: nathan@pathsource.com
 description: "Pathsource Blog and Timeline"
 baseurl: ""
